# hwr-ical-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: embed_builder.rs  fetcher.rs  main.rs
