[package]
name = "hwr-ical-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
reqwest = "0.11"
async-trait = "0.1"
serenity = { version = "0.11", default-features = false, features = ["builder", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
icalendar = "0.15"
dotenvy = "0.15"
